# prosewriter

./: LICENSE  README.md  prosewriter.py  pyproject.toml
prosewriter/: prosewriter.py
src/: prosewriter.py
tests/: test_prosewriter.py
