[tool.poetry]
name = "prosewriter"
version = "0.1.0"
description = "Extract requirements.txt from pyproject.toml"
authors = ["Giulia Vergottini <hello@railslide.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
